--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,17 @@
 <body>
     <!--Header-->
     <section>
-        <nav>
+        <nav class="horizontaal box">
             <!--Links Logo Rechts links -->
             <!--Transparante Navbar of niet?-->
+            <img src="Overlay.jpg" alt="Just the Header Banner" class="fit">
+            <div class="navbar">
+                <a href="Website.html">Website building</a>
+                <a href="Software.html">Software building</a>
+                <a href="Apps.html">App development</a>
+                <a href="Contact.html">Contact us!</a>
+            </div>
         </nav>
-        <!--Banner-->
-        <div class= "Banner">
-            <img src="" alt="">
-        </div>
     </section>
     <!--Body-->
     <section>
@@ -28,7 +31,9 @@
         <!--Who are we? kolom links foto rechts tekst-->
         <h2>Who am I?</h2>
         <p></p>
-        <!--Previous Projects/Portfolio-->
+        <!--Previous Projects/Portfolio -->
+        <h2>Previous Projects</h2>
+        <p></p>
     </section>
     <!--Footer-->
     <footer>
