--- a/Index.html
+++ b/Index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <!--Header-->
-    <section>
-        <nav class="horizontaal box">
-            <!--Links Logo Rechts links -->
-            <!--Transparante Navbar of niet?-->
-            <img src="Overlay.jpg" alt="Just the Header Banner" class="fit">
+    <section class="header">
+        <nav>
+            <div class="logo">
+               <img src="Marielle Price.png" alt="">
+            </div>
             <div class="navbar">
                 <a href="Website.html">Website building</a>
                 <a href="Software.html">Software building</a>
@@ -26,7 +26,7 @@
     <!--Body-->
     <section>
         <!--Short what do we do?-->
-        <h2>what do we do?</h2>
+        <h2>What do we do?</h2>
         <p></p>
         <!--Who are we? kolom links foto rechts tekst-->
         <h2>Who am I?</h2>
@@ -39,5 +39,6 @@
     <footer>
         <!--Rechts Contactgegevens? Links linkjes naar verschillende paginas + copyright-->
     </footer>
+    <script type="text/javascript" src="Standard.js">  </script>
 </body>
 </html>
