--- a/Index.html
+++ b/Index.html
@@ -26,15 +26,21 @@
     </section>
     <!--Body-->
     <section>
+        <div>
         <!--Short what do we do?-->
-        <h2>What do we do?</h2>
-        <p></p>
+            <h2 class="center">What do I do?</h2>
+            <p>I'm a developer who can develop every</p>
+        </div>
+        <div>
         <!--Who are we? kolom links foto rechts tekst-->
-        <h2>Who am I?</h2>
-        <p></p>
+            <h2 class="center">Who am I?</h2>
+            <p></p>
+        </div>
+        <div>
         <!--Previous Projects/Portfolio -->
-        <h2>Previous Projects</h2>
-        <p></p>
+            <h2 class="center">Previous Projects</h2>
+            <p></p>
+        </div>
     </section>
     <!--Footer-->
     <footer>
