--- a/Index.html
+++ b/Index.html
@@ -28,8 +28,8 @@
     <section>
         <div>
         <!--Short what do we do?-->
-            <h2 class="center">What do I do?</h2>
-            <p>I'm a developer who can develop every</p>
+            <h2 class="center">What do we do?</h2>
+            <p>We build your wishes as you wish it! We mix our experience with your  </p>
         </div>
         <div>
         <!--Who are we? kolom links foto rechts tekst-->
