--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -32,5 +33,10 @@
             </div>
         </div>
     </section>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Doloribus eius delectus possimus quas sint quis aut ea dignissimos, nobis illum odit aspernatur, autem enim? Non vero qui esse ratione hic! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus minus a consectetur qui beatae impedit dolor in neque earum libero! Totam, ab? Autem, totam. Quod aliquam excepturi impedit quos magnam?
+    </p>
+    <script src="script.js"></script>
 </body>
 </html>
