--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li><a href="">Projects</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </nav>
 
@@ -30,6 +33,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Raynaud</div>
                 <div class="text-3">And I'm a <span>Web Designer</span></div>
+                <a href="#">Hire me</a>
             </div>
         </div>
     </section>
