--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Raynaud</div>
-                <div class="text-3">And I'm a <span>Web Designer</span></div>
+                <div class="text-3">And I'm suck <span>dick</span></div>
                 <a href="#">Hire me</a>
             </div>
         </div>
