--- a/index.html
+++ b/index.html
@@ -32,15 +32,26 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Raynaud</div>
-                <div class="text-3">And I'm suck <span>dick</span></div>
+                <div class="text-3">And I'm a <span>web designer</span></div>
                 <a href="#">Hire me</a>
             </div>
         </div>
     </section>
-
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Doloribus eius delectus possimus quas sint quis aut ea dignissimos, nobis illum odit aspernatur, autem enim? Non vero qui esse ratione hic! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus minus a consectetur qui beatae impedit dolor in neque earum libero! Totam, ab? Autem, totam. Quod aliquam excepturi impedit quos magnam?
-    </p>
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="download.jpg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Raynaud and I'm a <span>Designer</span></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam exercitationem enim nulla sed distinctio ipsam, itaque nisi earum blanditiis molestias iste. Earum excepturi voluptas omnis, soluta deleniti reiciendis fugit nesciunt?</p>
+                    <a href="">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
