--- a/index.html
+++ b/index.html
@@ -52,6 +52,40 @@
             </div>
         </div>
     </section>
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">Services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum ex, possimus nobis ad corporis.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Advertising</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum ex, possimus nobis ad corporis.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">App Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum ex, possimus nobis ad corporis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">Skills</h2>
+        </div>
+    </section>
+    
     <script src="script.js"></script>
 </body>
 </html>
