--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 </head>
 <body>
     <nav class="navbar">
@@ -129,7 +132,42 @@
             </div>
         </div>
     </section>
-    
+    <section class="projects" id="projects">
+        <div class="max-width">
+            <h2 class="title">Projects</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">Veloc Site</div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>    
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">Tech4Stu</div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>    
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">Veloc Site</div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>    
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">Veloc Site</div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    </div>    
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact"></section>
     <script src="script.js"></script>
 </body>
 </html>
