--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio</span></a></div>
             <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -223,6 +223,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <span>Created By Raynaud Cornille | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+    </footer> 
     <script src="script.js"></script>
 </body>
 </html>
