--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Raynaud</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Hire me</a>
             </div>
         </div>
     </section>
@@ -201,28 +201,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="column right">
-                    <div class="text">Form</div>
-                    <form action="#">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
-                            </div>
-                            <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Describe what you want or ask your questions!" required></textarea>
-                        </div>
-                        <div class="button">
-                            <button type="submit">Send message</button>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
