--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Raynaud and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam exercitationem enim nulla sed distinctio ipsam, itaque nisi earum blanditiis molestias iste. Earum excepturi voluptas omnis, soluta deleniti reiciendis fugit nesciunt?</p>
-                    <a href="">Download CV</a>
+                    <p>Hello, I'm Raynaud. I'm 20 years old and study electronics-ICT at the KU Leuven in Gent, Belgium. I have always been fascinated by the art of coding.
+                        When I was 12 I wrote my first code, to make a small website. After that I never stopped coding and learned a lot more of it. I even pranked some of my friends by making a fake news page.
+                        On this page I told silly jokes about my friends soccer team. That brings me to my second passion: sports. The greatest part of my time I play sports. 
+                        At the moment I play soccer, but back in the day I played golf, tennis and even did some windsurfing.
+                    </p>
+                    <!--<a href="">Download CV</a>-->
                 </div>
             </div>
         </div>
@@ -67,21 +71,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum ex, possimus nobis ad corporis.</p>
+                        <p>I can design and develop a full-stack website for you. The website, responsive for all devices, will be designed as you like it. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum ex, possimus nobis ad corporis.</p>
+                        <div class="text">SEO-Optimal</div>
+                        <p>The Website will be fully suited for the Internet. I will design the website so it has the best SEO you can find on the World Wide Web. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">App Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum ex, possimus nobis ad corporis.</p>
+                        <p>If you want I can even design and develop a suiting app. The app will be fully operational in the same style as your website. </p>
                     </div>
                 </div>
             </div>
@@ -116,19 +120,19 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
+                            <span>JavaScript and Node.js</span>
+                            <span>70%</span>
                         </div>
-                        <div class="line html">
+                        <div class="line javascript">
                             
                         </div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
+                            <span>MongoDB</span>
+                            <span>50%</span>
                         </div>
-                        <div class="line html">
+                        <div class="line mongo">
                             
                         </div>
                     </div>
@@ -141,20 +145,24 @@
             <h2 class="title">Projects</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
-                    <div class="box">
-                        <img src="#" alt="">
-                        <div class="text">Veloc Site</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                    </div>    
+                    <a href="https://www.velocworld.com/" target="_blank">
+                        <div class="box">
+                            <img src="Veloc.PNG" alt="Picture of previous project">
+                            <div class="text">Veloc Site</div>
+                            <p>This was my first website I made for my dad. It's about an innovative bicycle storage, he just launched.</p>
+                        </div>
+                    </a>    
                 </div>
                 <div class="card">
+                    <a href="https://hillclimber.tech4stu.be/" target="_blank">
                     <div class="box">
-                        <img src="#" alt="">
+                        <img src="Hillclimber.png" alt="Tech4Stu Website">
                         <div class="text">Tech4Stu</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                    </div>    
+                        <p>This is a website, I made together with some other students. It's a progress site about a game we made.</p>
+                    </div>
+                    </a>    
                 </div>
-                <div class="card">
+                <!--<div class="card">
                     <div class="box">
                         <img src="#" alt="">
                         <div class="text">Veloc Site</div>
@@ -167,7 +175,7 @@
                         <div class="text">Veloc Site</div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>    
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -177,7 +185,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum ipsum illo dolore labore aliquid aperiam cumque sed nihil accusamus.</p>
+                    <p>If you have some questions about anything or if you would like to use my services, you can always contact me!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
