--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My skills</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, rerum? Dicta, harum voluptate maiores itaque impedit minima saepe possimus quasi mollitia velit consequatur ab cum soluta sit debitis incidunt deserunt a vitae. Illo alias iste eveniet! Vitae sit adipisci sapiente rerum totam fuga praesentium vel asperiores tempora voluptates. Quis suscipit ex harum corrupti est et assumenda ad? Labore, nemo natus.</p>
+                    <p>I'm a full stack developer. I mainly use the MERN stack but I can switch if you want me to. At school I took a networking class, so backend stuff doesn't have any secrets for me anymore. Creating little logos or images for your website isn't a problem eather. If you want to know more about my skills, you can contact me!   </p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -158,7 +158,7 @@
                     <div class="box">
                         <img src="Hillclimber.png" alt="Tech4Stu Website">
                         <div class="text">Tech4Stu</div>
-                        <p>This is a website, I made together with some other students. It's a progress site about a game we made.</p>
+                        <p>This is a website, I made together with other students. It's a progress site about a game we made.</p>
                     </div>
                     </a>    
                 </div>
