Adding extra card
Adding extra card for redesign

--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
                         </div>
                     </a>    
                 </div>
-                <!--<div class="card">
-                    <a href="https://hillclimber.tech4stu.be/" target="_blank">
+                <div class="card">
+                    <a href="seynhaeve.html" target="_blank">
                     <div class="box">
-                        <img src="Hillclimber.png" alt="Tech4Stu Website">
+                        <img src="" alt="Redesign">
                         <div class="text">Tech4Stu</div>
-                        <p>This is a website, I made together with other students. It's a progress site about a game we made.</p>
+                        <p>This is a website, I redesigned for a company.</p>
                     </div>
                     </a>    
                 </div>
-                <div class="card">
+                <!--<div class="card">
                     <div class="box">
                         <img src="#" alt="">
                         <div class="text">Veloc Site</div>
