--- a/seynhaeve.html
+++ b/seynhaeve.html
@@ -8,17 +8,12 @@
     <link rel="stylesheet" href="seynhaeve.css">
 </head>
 <body>
-    <!--The welcome-->
-    <div class="welcome">
-        <img src="logo_groot.png" alt="Logo seynhaeve">
-    </div>
     <!--Menu-->
     <div>
-
-    </div>
-    <!--Rest of page-->
-    <div>
-        
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
     </div>
 </body>
 </html>
