--- a/html/seynhaeve.html
+++ b/html/seynhaeve.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seynhaeve redesign</title>
-    <link rel="stylesheet" href="seynhaeve.css">
+    <link rel="stylesheet" href="/css/seynhaeve.css">
 </head>
 <body>
     <!--Menu-->
     <div>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="seynhaeve.html"><img src="/fotos/logo_groot.png" alt="logo"></a>
+        <a href="gamma.html">Gamma</a>
+        <a href="diensten.html">Diensten</a>
+        <a href="contact.html">Contact</a>
     </div>
 </body>
 </html>
