--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Raynaud's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -49,7 +49,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="pf.jpg" alt="">
+                    <img src="/fotos/pf.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Raynaud and I'm a <span class="typing-2"></span></div>
@@ -147,7 +147,7 @@
                 <div class="card">
                     <a href="https://www.velocworld.com/" target="_blank">
                         <div class="box">
-                            <img src="Veloc.PNG" alt="Picture of previous project">
+                            <img src="/fotos/Veloc.PNG" alt="Picture of previous project">
                             <div class="text">Veloc Site</div>
                             <p>This was my first website I made for my dad. It's about an innovative bicycle storage, he just launched.</p>
                         </div>
@@ -216,6 +216,6 @@
     <footer>
         <span>Created By Raynaud Cornille | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer> 
-    <script src="script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
