--- a/html/seynhaeve.html
+++ b/html/seynhaeve.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <!--Menu-->
-    <div>
-        <a href="seynhaeve.html"><img src="/fotos/logo_groot.png" alt="logo"></a>
-        <a href="gamma.html">Gamma</a>
-        <a href="diensten.html">Diensten</a>
-        <a href="contact.html">Contact</a>
+    <div class="menu">
+        <div class="items">
+            <a href="seynhaeve.html"><img src="/fotos/logo_groot.png" alt="logo" id="logo"></a>
+            <a href="gamma.html">Gamma</a>
+            <a href="diensten.html">Diensten</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </div>
 </body>
 </html>
