--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My skills</div>
-                    <p>I'm a full stack developer. I mainly use the MERN stack but I can switch if you want me to. At school I took a networking class, so backend stuff doesn't have any secrets for me anymore. Creating little logos or images for your website isn't a problem eather. If you want to know more about my skills, you can contact me!   </p>
+                    <p>I'm a full stack developer. I mainly use the MERN stack but I can switch if you want me to. I also have experience with python and django. At school I took a networking class, so backend stuff doesn't have any secrets for me anymore. Creating little logos or images for your website isn't a problem eather. If you want to know more about my skills, you can contact me!   </p>
                 </div>
                 <div class="column right">
                     <div class="bars">
