--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
     <footer>
         <span>Created By Raynaud Cornille | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer> 
-    <script src="/scripts/script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
