--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -216,6 +216,6 @@
     <footer>
         <span>Created By Raynaud Cornille | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer> 
-    <script src="../scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
