--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/fotos/pf.jpg" alt="">
+                    <img src="fotos\pf.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Raynaud and I'm a <span class="typing-2"></span></div>
@@ -147,7 +147,7 @@
                 <div class="card">
                     <a href="https://www.velocworld.com/" target="_blank">
                         <div class="box">
-                            <img src="/fotos/Veloc.PNG" alt="Picture of previous project">
+                            <img src="fotos\Veloc.PNG" alt="Picture of previous project">
                             <div class="text">Veloc Site</div>
                             <p>This was my first website I made for my dad. It's about an innovative bicycle storage, he just launched.</p>
                         </div>
